# faceid_library

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  TESTING.md  index.html  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi-publish.yml
docs/: Makefile.txt  conf.py  contributing.rst  index.rst  installation.rst  make.bat  requirements.txt
docs/_build/html/: .buildinfo  api.html  changelog.html  contributing.html  examples.html  genindex.html  index.html  installation.html  objects.inv  quickstart.html  search.html  searchindex.js
docs/_build/html/.doctrees/: api.doctree  changelog.doctree  contributing.doctree  examples.doctree  index.doctree  installation.doctree  quickstart.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/faceid/: core.html
docs/_build/html/_sources/: api.rst.txt  changelog.rst.txt  examples.rst.txt  quickstart.rst.txt
examples/: 01_basic_usage.py  02_camera_recognition.py  03_database_management.py  04_batch_processing.py
faceid/: __init__.py  core.py  database.py  demo.py  detector.py  models.py  utils.py
