@"
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faceid-lib"
version = "1.0.0"
description = "Advanced Face Recognition Library for Python"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "attendance1978-wq", email = "your-email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/attendance1978-wq/faceid_library"
Documentation = "https://faceid-lib.readthedocs.io"
Repository = "https://github.com/attendance1978-wq/faceid_library.git"
Issues = "https://github.com/attendance1978-wq/faceid_library/issues"

[project.scripts]
faceid-demo = "faceid.demo:run_demo"

[tool.setuptools.packages.find]
include = ["faceid*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
"@ | Out-File -FilePath pyproject.toml -Encoding UTF8
